# terrain-aware-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: analytical_scintilla_asphalt.yaml  analytical_scintilla_asphalt_best.yaml
examples/: analytical_open_loop_rollouts.py  analytical_vs_data_rollout.py  diag_d1_error_accumulation.py  diag_d2_onestep_residuals.py  diag_d3_longitudinal_force.py  diag_d4_yaw_rate_residual.py  diag_d5_state_reset_rollouts.py  diag_rootcause.py  diagnose_delay.py  mpc_track_following.py  mppi_track_following.py  tune_analytical_params.py
terrain_aware_model/: __init__.py  model.py
tools/beamng_data_processing/: extract_bag_data.py  inspect_processed_data.py  inspect_raw_data.py  load_data.py  normalization.py  process_data.py  shuffle_and_split_data.py  van_der_pol.py
