[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terrain-aware-model"
version = "0.1.0"
description = "Analytic vehicle dynamics model with MPC example."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["terrain_aware_model*"]
